# juicerss

./: CHANGELOG.md  Cargo.toml  Containerfile  README.md  example.toml  juicerss.rpkg.spec  juicerss.spec  rpm.Containerfile
.github/workflows/: lint.yml  release-publish.yml  release.yml
src/: config.rs  main.rs  tui.rs
